--- a/frontend/src/style/scss/catalog.scss
+++ b/frontend/src/style/scss/catalog.scss
@@ -99,6 +99,8 @@
     img{
         width: 30px;
         height: 23px;
+        margin-top: -1.7px;
+        margin-left: 0.49px;
         
     }
 }
