--- a/frontend/src/style/scss/landing-page.scss
+++ b/frontend/src/style/scss/landing-page.scss
@@ -150,7 +150,6 @@
         height: 100%;
         width: 100%;
 
-        
     }
 }
 
@@ -235,6 +234,7 @@
     bottom: 125px;
     left: 10px;
     img{
+        margin-top: 2.6px;
         width: 2rem;
         height: 23px;
     }
@@ -248,6 +248,8 @@
     img{
         width: 2rem;
         height: 23px;
+        margin-top: -1.7px;
+        margin-left: 0.3px;
         
     }
 }
