--- a/frontend/src/style/scss/root.scss
+++ b/frontend/src/style/scss/root.scss
@@ -258,6 +258,10 @@ nav{
         width: 2.5rem;
         height: 2.5rem;
     }
+    #user-account{
+        width: 2.5rem;
+        height: 2.5rem;
+    }
 
     
 
@@ -528,6 +532,10 @@ li{
     }
     
   }
+
+.empty-page{
+    height: 100vh;
+}
 
 
  
